// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component Header component renders correctly when signed in 1`] = `
<Header>
  <div
    className="header"
  >
    <div
      className="app-title"
    >
      TinyThoughts
    </div>
    <div
      className="app-nav"
    >
      <ul>
        <li>
          <Link
            to="/"
          >
            <LinkAnchor
              href="/"
              navigate={[Function]}
            >
              <a
                href="/"
                onClick={[Function]}
              >
                Home
              </a>
            </LinkAnchor>
          </Link>
        </li>
        <li>
          <Link
            to="/add"
          >
            <LinkAnchor
              href="/add"
              navigate={[Function]}
            >
              <a
                href="/add"
                onClick={[Function]}
              >
                New Post
              </a>
            </LinkAnchor>
          </Link>
        </li>
      </ul>
    </div>
    <Connect(Component)>
      <Memo()
        onSignOut={[Function]}
        user={
          Object {
            "id": 1,
            "name": "Joe Mockery",
          }
        }
      >
        <div
          className="account-nav"
        >
          <h4>
            Joe Mockery
          </h4>
          <ul>
            <li>
              <Link
                onClick={[Function]}
                to="/"
              >
                <LinkAnchor
                  href="/"
                  navigate={[Function]}
                  onClick={[Function]}
                >
                  <a
                    href="/"
                    onClick={[Function]}
                  >
                    Signout
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
        </div>
      </Memo()>
    </Connect(Component)>
  </div>
</Header>
`;

exports[`Header component Header component renders correctly when signed out 1`] = `
<Header>
  <div
    className="header"
  >
    <div
      className="app-title"
    >
      TinyThoughts
    </div>
    <div
      className="app-nav"
    >
      <ul>
        <li>
          <Link
            to="/"
          >
            <LinkAnchor
              href="/"
              navigate={[Function]}
            >
              <a
                href="/"
                onClick={[Function]}
              >
                Home
              </a>
            </LinkAnchor>
          </Link>
        </li>
        <li>
          <Link
            to="/add"
          >
            <LinkAnchor
              href="/add"
              navigate={[Function]}
            >
              <a
                href="/add"
                onClick={[Function]}
              >
                New Post
              </a>
            </LinkAnchor>
          </Link>
        </li>
      </ul>
    </div>
    <Connect(Component)>
      <Memo()
        onSignOut={[Function]}
      >
        <div
          className="account-nav"
        >
          <ul>
            <li>
              <Link
                to="/signin"
              >
                <LinkAnchor
                  href="/signin"
                  navigate={[Function]}
                >
                  <a
                    href="/signin"
                    onClick={[Function]}
                  >
                    Signin
                  </a>
                </LinkAnchor>
              </Link>
            </li>
            <li>
               
              <Link
                to="/signup"
              >
                <LinkAnchor
                  href="/signup"
                  navigate={[Function]}
                >
                  <a
                    href="/signup"
                    onClick={[Function]}
                  >
                    Signup
                  </a>
                </LinkAnchor>
              </Link>
            </li>
          </ul>
        </div>
      </Memo()>
    </Connect(Component)>
  </div>
</Header>
`;

exports[`Header component renders correctly when signed in`] = `
<Header>
  <div
    className="header"
  >
    <div
      className="app-title"
    >
      TinyThoughts
    </div>
    <div
      className="app-nav"
    >
      <ul>
        <Link
          to="/"
        >
          <LinkAnchor
            href="/"
            navigate={[Function]}
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <li>
                Home
              </li>
            </a>
          </LinkAnchor>
        </Link>
        <Link
          to="/add"
        >
          <LinkAnchor
            href="/add"
            navigate={[Function]}
          >
            <a
              href="/add"
              onClick={[Function]}
            >
              <li>
                New Post
              </li>
            </a>
          </LinkAnchor>
        </Link>
      </ul>
    </div>
    <Memo()>
      <div
        className="account-nav"
      >
        <h4>
          Joe Mockery
        </h4>
        <ul>
          <li
            onClick={[Function]}
          >
            Signout
          </li>
        </ul>
      </div>
    </Memo()>
  </div>
</Header>
`;

exports[`Header component renders correctly when signed out`] = `
<Header>
  <div
    className="header"
  >
    <div
      className="app-title"
    >
      TinyThoughts
    </div>
    <div
      className="app-nav"
    >
      <ul>
        <Link
          to="/"
        >
          <LinkAnchor
            href="/"
            navigate={[Function]}
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <li>
                Home
              </li>
            </a>
          </LinkAnchor>
        </Link>
        <Link
          to="/add"
        >
          <LinkAnchor
            href="/add"
            navigate={[Function]}
          >
            <a
              href="/add"
              onClick={[Function]}
            >
              <li>
                New Post
              </li>
            </a>
          </LinkAnchor>
        </Link>
      </ul>
    </div>
    <Memo()>
      <div
        className="account-nav"
      >
        <ul>
          <Link
            to="/signin"
          >
            <LinkAnchor
              href="/signin"
              navigate={[Function]}
            >
              <a
                href="/signin"
                onClick={[Function]}
              >
                <li>
                  Signin
                </li>
              </a>
            </LinkAnchor>
          </Link>
          <Link
            to="/signup"
          >
            <LinkAnchor
              href="/signup"
              navigate={[Function]}
            >
              <a
                href="/signup"
                onClick={[Function]}
              >
                <li>
                  Signup
                </li>
              </a>
            </LinkAnchor>
          </Link>
        </ul>
      </div>
    </Memo()>
  </div>
</Header>
`;
